@@ -1,3 +1,8 @@
+2015-03-09  Olaf Bergmann  <bergmann@tzi.org>
+
+	* src/uri.c (coap_split_path): Fixed URI parser bug and
+	removed broken parse iterator.
+
 2015-03-05  Olaf Bergmann  <bergmann@tzi.org>
 
 	* src/coap_time.c (coap_ticks): Changed POSIX implementation
